feat: setup allowed urls

--- a/apps/rickandroll-web/src/index.html
+++ b/apps/rickandroll-web/src/index.html
@@ -31,7 +31,9 @@
         <div class="result hidden" id="urlResult">
           <button class="copy-btn" id="copyBtn">Copy</button>
         </div>
-        <button id="actionBtn">Create Rick Roll</button>
+        <div>
+          <button id="actionBtn">Create Rick Roll</button>
+        </div>
       </div>
     </section>
   </body>
