feat: add common definitions and urls to frontend

--- a/apps/rickandroll-web/src/index.html
+++ b/apps/rickandroll-web/src/index.html
@@ -32,6 +32,7 @@
           <button class="copy-btn" id="copyBtn">Copy</button>
         </div>
         <div>
+          <select id="selectedTarget"></select>
           <button id="actionBtn">Create Rick Roll</button>
         </div>
       </div>
