feat: styling for stats

--- a/apps/rickandroll-stats/src/index.html
+++ b/apps/rickandroll-stats/src/index.html
@@ -20,16 +20,7 @@
         </ul>
       </header>
 
-      <div class="strapline">
-        <h2>Create Short URLs to Rick Roll your friends.</h2>
-        <div class="result hidden" id="urlResult">
-          <button class="copy-btn" id="copyBtn">Copy</button>
-        </div>
-        <div>
-          <select id="selectedTarget"></select>
-          <button id="actionBtn">Create Rick Roll</button>
-        </div>
-      </div>
+      <div class="strapline"></div>
     </section>
   </body>
 </html>
