feat: add instructions

--- a/apps/rickandroll-stats/src/index.html
+++ b/apps/rickandroll-stats/src/index.html
@@ -21,6 +21,13 @@
       </header>
 
       <div class="strapline"></div>
+      <div class="urlLookup">
+        <div class="urlLookup__input">
+          <label for="shortUrlId">Enter a short URL ID:</label>
+          <input type="text" id="shortUrlId" />
+        </div>
+        <button id="shortUrlBtn">View Stats</button>
+      </div>
     </section>
   </body>
 </html>
