--- a/apps/rickandroll-web/src/index.html
+++ b/apps/rickandroll-web/src/index.html
@@ -19,10 +19,12 @@
       <header>
         <span class="logo"><h1>Rickandroll.me</h1></span>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Instructions</li>
-          <li>Contribute</li>
+          <li><a href="https://rickandroll.me">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#instructions">Instructions</a></li>
+          <li>
+            <a href="https://github.com/codebubb/rickandroll">Contribute</a>
+          </li>
         </ul>
       </header>
 
@@ -37,5 +39,49 @@
         </div>
       </div>
     </section>
+    <section id="instructions">
+      <h2>Instructions</h2>
+      <p>
+        You can generate a short URL to send to your friends; they'll be redirected to a Rick Roll video of your choice and then you can view stats of where it was accessed from!
+        <ul>
+          <li>Generate a short URL using the form above.</li>
+          <li>Forward the disguised, short url link to your colleagues by whatever means you can.</li>
+          <li>View the stats by adding <em>/viewstats</em> to the end of your short URL ! (for example <em>https://51w.site/7pdgUd/viewstats</em>
+          </li>
+        </ul>
+      </p>
+      <p>You can generate as many short URLs as you like.</p>
+    </section>
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        This is a simple URL shortener app that was made as part of a full,
+        end-to-end project on the
+        <a href="https://youtube.com/juniordevelopercentral"
+          >Junior Developer Central</a
+        >
+        YouTube channel.
+      </p>
+      <p>
+        Although its a simple app, the idea of the project was to create
+        something from scratch going through all the processes involved in a
+        project from the design, to purchasing the domain(s) and hosting and
+        configuring a build pipeline to automatically build and push the built
+        code to a production server.
+      </p>
+      <p>
+        Whilst there are many different (and easier!) ways of setting up an
+        environment like this, the idea of the granular tutorials is to go in
+        depth with all the details of how it might be done with the available
+        tools and then you can decide to replace any parts of the system if you
+        find a different way of doing something.
+      </p>
+    </section>
+    <footer>
+      <p>
+        Made with ❤️ &amp; ☕️ by
+        <a href="https://twitter.com/codebubb">@codebubb</a>
+      </p>
+    </footer>
   </body>
 </html>
