feat: final tidy up

--- a/apps/rickandroll-stats/src/index.html
+++ b/apps/rickandroll-stats/src/index.html
@@ -12,7 +12,7 @@
     <section class="section--hero">
       <header>
         <span class="logo"><h1>Rickandroll.me</h1></span>
-        <ul>
+        <ul id="menu">
           <li>Home</li>
           <li>About</li>
           <li>Instructions</li>
